--- a/action.yml
+++ b/action.yml
@@ -4,6 +4,12 @@ runs:
   using: "composite"
   steps:
 
+    - name: "Install yq"
+      shell: bash
+      run: |
+        sudo apt update
+        sudo apt install --yes yq
+
     - name: "Create CITATION-generated.cff from PackageInfo.g"
       shell: bash
       run: |
